--- a/src/assets/styles/_base.scss
+++ b/src/assets/styles/_base.scss
@@ -4,26 +4,28 @@ body{
 
 header {
 color: var(--primary);
-position: absolute;
+
 width: 85%;
-height: 68px;
+margin-top: 2.5rem ;
+margin-right: 0;
+margin-left: 2.5rem;
+padding-left: 1.5rem;
+height: 7rem;
 left: 100px;
 top: 40px;
 
 }
 
 .logo{
-    position: absolute; 
-    left: 0%;
-    right: 83,04%; 
-    top: 0%; 
-    bottom: 0%;
+    width: 13.1rem;
+    height: 4.2rem;
+    
 }
 
 nav {
     margin-left: auto;
+    margin-right:-2.8rem;
     align-items: flex-end;
-   
 }
 
 ul {
@@ -46,11 +48,45 @@ li:hover{
 }
 
 body {
-    margin: 0;
+  
     font-family: var(--font-family);
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
   }
+
+  .banner{
+    color: white; 
+    height: 12rem; 
+    width: 91%;
+    padding: 0 3rem 0 3rem; 
+    margin: auto;
+    position: relative;
+
+  }
+
+  .banner img{
+    width:100%;
+    height: 100%;
+    object-fit: content;
+    filter: brightness(65%);
+    border-radius: 25px;
+  }
+.banner h1 {
+    font-size: 2.7rem;
+  position: absolute; 
+  top: 35%;
+  bottom: 40%; 
+  right: 12%;
+  left: 22%;
+}
+
+.cardsContainer{
+background: #F6F6F6; 
+border-radius: 25px;
+height: 30rem;
+width:90%; 
+margin: 2rem auto 2rem auto;
+}
 
  h1, h2, h3, h4, h5 {
     margin: 0;
