--- a/src/assets/styles/_base.scss
+++ b/src/assets/styles/_base.scss
@@ -1,50 +1,14 @@
 body{
-    margin:10px;
+    margin:0;
 }
-
-header {
-color: var(--primary);
-
-width: 85%;
-margin-top: 2.5rem ;
-margin-right: 0;
-margin-left: 2.5rem;
-padding-left: 1.5rem;
-height: 7rem;
-left: 100px;
-top: 40px;
-
+#root{
+    margin:0;
+    width: 100%;
 }
-
-.logo{
-    width: 13.1rem;
-    height: 4.2rem;
-    
-}
-
-nav {
-    margin-left: auto;
-    margin-right:-2.8rem;
-    align-items: flex-end;
-}
-
-ul {
-    list-style-type: none;
-}
-
-li{  
-    font-style: normal;
-    font-weight: bolder;
-    margin-left: 4rem;
-    font-size: 24px;
-    line-height: 142.6%;
-    cursor: pointer; 
-     ;
-    /* or 34px */
-} 
-
-li:hover{
-    text-decoration: underline;
+.pageBloc{
+    // padding-left: 15px;
+    // padding-right: 15px;
+    margin:0;
 }
 
 body {
@@ -53,62 +17,23 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
   }
-
-  .banner{
-    color: white; 
-    height: 12rem; 
-    width: 91%;
-    padding: 0 3rem 0 3rem; 
-    margin: auto;
-    position: relative;
-
+ 
+  .homePage{
+    margin: 0;
+    width: 100%;
   }
 
-  .banner img{
-    width:100%;
-    height: 100%;
-    object-fit: content;
-    filter: brightness(65%);
-    border-radius: 25px;
-  }
-.banner h1 {
-    font-size: 2.7rem;
-  position: absolute; 
-  top: 35%;
-  bottom: 40%; 
-  right: 12%;
-  left: 22%;
-}
 
 .cardsContainer{
 background: #F6F6F6; 
 border-radius: 25px;
 height: 30rem;
 width:90%; 
-margin: 2rem auto 2rem auto;
+margin: 1.5rem auto 1.5rem auto;
 }
 
  h1, h2, h3, h4, h5 {
     margin: 0;
  }
 
- footer {
-    margin: auto;
-    width: 100%;
-    padding: 4.2rem ;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    font-size: 1.5rem;
-    font-weight: bolder;
-    background-color: black; 
- } 
-
- .footerImg{
-    width: 125px;
-    margin-left: auto;
-    margin-right: auto;
  
- }
