affichage des appartements

--- a/src/assets/styles/_base.scss
+++ b/src/assets/styles/_base.scss
@@ -27,9 +27,11 @@ body {
 .cardsContainer{
 background: #F6F6F6; 
 border-radius: 25px;
-height: 30rem;
+height: 90%;
 width:90%; 
 margin: 1.5rem auto 1.5rem auto;
+display: flex;
+
 }
 
  h1, h2, h3, h4, h5 {
