--- a/src/assets/styles/_base.scss
+++ b/src/assets/styles/_base.scss
@@ -29,8 +29,12 @@ background: #F6F6F6;
 border-radius: 25px;
 height: 90%;
 width:90%; 
-margin: 1.5rem auto 1.5rem auto;
-display: flex;
+margin: 1rem auto 1rem auto;
+padding: 1rem 0.3rem 1rem 0.3rem;
+display: flex;   
+    flex-wrap: wrap;
+justify-content: space-evenly;
+  
 
 }
 
