--- a/src/assets/styles/_lodgingsCards.scss
+++ b/src/assets/styles/_lodgingsCards.scss
@@ -1,7 +1,22 @@
-.cards {
-   
+.lodgingscards {
+    width: 30%;
+    height: 20rem;
+    margin: 1rem 0 1rem 0;
+    border-radius: 10px;
+    background-color:  #FF6060; ;
+}
+.lodgingscards img{
+    width: 100%;
+    height: 80%;
+    object-fit: cover;
+    background-color: #FF6060;
+    border-top-right-radius: 10px; 
+    border-top-left-radius: 10px;
 }
 
-.cards img{
-    width: 50%;
+.lodgingscards h2{
+    font-size: 1.2rem;
+    color: white;
+    width: 100%; 
+    margin: auto auto auto 0.3rem;
 }
