composant collapse terminé

--- a/src/assets/styles/_banner.scss
+++ b/src/assets/styles/_banner.scss
@@ -23,3 +23,15 @@
   right: 12%;
   left: 22%;
 }
+
+.banner2{
+  margin: auto;
+  width: 92%; 
+  height: 100%; 
+} 
+
+.banner2 img{
+  width: 100%;
+  object-fit: content;
+  border-radius: 25px;
+}
