--- a/src/assets/styles/_header.scss
+++ b/src/assets/styles/_header.scss
@@ -1,5 +1,4 @@
 header {
-    color: var(--primary);
     width: 85.5%;
     margin-top: 2.5rem ;
     margin-right: 0;
@@ -32,10 +31,13 @@ header {
         font-size: 24px;
         line-height: 142.6%;
         cursor: pointer; 
-         ;
-        /* or 34px */
     } 
     
-    li:hover{
+    .customLink {
+        color:var(--primary);
+        text-decoration: none;
+    }
+
+    .customLink:hover{
         text-decoration: underline;
     }
