--- a/src/assets/styles/_lodgingPage.scss
+++ b/src/assets/styles/_lodgingPage.scss
@@ -13,6 +13,12 @@
     flex-direction: row; 
     justify-content: space-between;
 }
+.firstBloc{
+    display: flex; 
+    // flex-direction: row;
+    // align-items: baseline;
+    // width: 90%; 
+}
 .tags{
     display: flex;
     margin-left: 0;
@@ -35,16 +41,25 @@
   display: flex; 
   flex-direction: row;
   justify-content: space-between; 
-  font-size: 1.5rem;
+  align-items: flex-end;
+  margin-right: 0px;
+  font-size: 1.1rem;
+//   position: relative; 
 }
 .hostDatas p{
-    margin: 35px;
-    width: 30px;
+    // margin: 35px;
+    // width: 30px;
     overflow-wrap: normal;
+    font-weight: 700;
+    text-align: center;
+    // position: absolute; 
+    // right: 110px;
 }
 .hostDatas img{
     border-radius: 50%;
-    padding: 1em;
-    height: 3.9em; 
-    width: 3.9em;
+    // padding: 1em;
+    height: 3.5em; 
+    width: 3.5em; 
+    // position: absolute;
+    // right: 0px;
 }
