--- a/src/assets/styles/_banner.scss
+++ b/src/assets/styles/_banner.scss
@@ -1,37 +1,73 @@
-.banner{
-    color: white; 
-    height: 12rem; 
-    // width: 91%;
-    padding: 0 3.9rem 0 3.9rem; 
-    margin: 0;
-    position: relative;
-
-  }
-
-  .banner img{
-    width:100%;
-    height: 100%;
-    object-fit: content;
-    filter: brightness(65%);
-    border-radius: 25px;
-  }
-.banner h1 {
-    font-size: 2.7rem;
-  position: absolute; 
-  top: 35%;
-  bottom: 40%; 
-  right: 12%;
-  left: 22%;
+.banner {
+  height: 14rem;
+  padding: 0 3.9rem 0 3.9rem;
+  margin: 0 4.2rem 3rem 4.2rem;
+  position: relative;
+  object-fit: content;
+  z-index: 0;
+  border-radius: 25px;
+  background-image: url('../images/herobanner.png');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-.banner2{
-  margin: auto;
-  width: 92%; 
-  height: 100%; 
-} 
-
-.banner2 img{
-  width: 100%;
-  object-fit: content;
+.banner::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.25);
   border-radius: 25px;
+}
+
+.banner h1 {
+  font-size: 2.7rem;
+  color: white;
+  white-space: nowrap;
+  position: absolute;
+  z-index: 1;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.banner2 {
+  margin: auto;
+  width: 92%;
+  height: 100%;
+}
+
+.banner2 img {
+  width: 100%;
+  object-fit:initial;
+  border-radius: 25px;
+}
+
+/* Media queries pour la version mobile */
+@media (max-width: 768px) {
+  .banner { 
+   height: 6.4rem;
+   border-radius: 12px;
+   text-align: start;
+   margin: 0 1.4rem 0 1.8rem;
+  }
+
+  .banner::before {
+    border-radius: 12px;
+  }
+
+  .banner h1 {
+    font-size: 1.3rem;
+    white-space: normal; 
+    top: 70%; 
+    left: 40%;
+    transform: translate(-50%, -70%); 
+  }
+
+  .banner2 img{
+    height: 15rem;
+    border-radius: 12px ; 
+  }
 }
