--- a/src/assets/styles/_base.scss
+++ b/src/assets/styles/_base.scss
@@ -6,8 +6,6 @@ body{
     width: 100%;
 }
 .pageBloc{
-    // padding-left: 15px;
-    // padding-right: 15px;
     margin:0;
 }
 
@@ -23,7 +21,6 @@ body {
     width: 100%;
   }
 
-
 .cardsContainer{
 background: #F6F6F6; 
 border-radius: 25px;
@@ -32,14 +29,20 @@ width:90%;
 margin: 1rem auto 1rem auto;
 padding: 1rem 0.3rem 1rem 0.3rem;
 display: flex;   
-    flex-wrap: wrap;
+flex-wrap: wrap;
 justify-content: space-evenly;
-  
-
 }
 
  h1, h2, h3, h4, h5 {
     margin: 0;
  }
 
- 
+ /* Media queries pour la version mobile */
+ @media (max-width: 768px) {
+  .cardsContainer{
+    background: white; 
+    width:auto; 
+    margin: 0px;
+    } 
+
+ }
