--- a/src/assets/styles/_header.scss
+++ b/src/assets/styles/_header.scss
@@ -1,41 +1,93 @@
 header {
-    width: 85.5%;
-    margin-top: 2.5rem ;
-    margin-right: 0;
-    margin-left: 2.5rem;
-    padding-left: 1.5rem;
-    padding-right: 1;
-    height: 7rem;
+    margin-top: 2.5rem;
+    margin-bottom: 2.5rem;
+    padding-left: 4.7rem;
+    padding-right: 4.7rem;
+    height: 5rem;
+    display: flex;
+    align-items: center;
+  }
+  
+  .logo {
+    width: 13.1rem;
+    height: 4.2rem;
+    margin-right:auto;
+  }
+  
+  nav {
+    margin-left: auto;
+    position: relative;
+  }
+  
+  ul {
+    list-style-type: none;
+    display: flex;
+    align-items: center;
+  }
+  
+  li {
+    font-style: normal;
+    font-weight: bolder;
+    margin-left: 4rem;
+    font-size: 24px;
+    line-height: 142.6%;
+    cursor: pointer;
+  }
+  
+  .customLink {
+    color: var(--primary);
+    text-decoration: none;
+  }
+  
+  .customLink:hover {
+    text-decoration: underline;
+  }
+  
+  /* Media queries pour la version tablette */
+  @media (max-width: 1024px) {
+    .logo {
+      width: 9rem;
+      height: 3rem;
+    }
+  
+    li {
+      margin-left: 2.5rem;
+      margin-right: 2rem;
+    }
+  }
+  
+  /* Media queries pour la version mobile */
+  @media (max-width: 767px) {
+    header {
+    margin-top: 1.5rem;
+    margin-bottom: 0;
+    height: auto;
+    width:auto;
+    padding-left: 2rem;
+    padding-right: 1rem;
+    }
+  
+    .logo {
+      max-width: 9rem; 
+      min-width: 5rem;
+      max-height: 3rem;
+      min-height: 1.5rem;
+      margin-bottom: 1rem;
     }
     
-    .logo{
-        width: 13.1rem;
-        height: 4.2rem;  
-    }
-    
-    nav {
-        margin-left: auto;
-        position: relative;
-    }
-    
+  nav{
+    margin-left: -1rem;
+  }
     ul {
-        list-style-type: none;
+      margin: 0;
     }
-    
-    li{  
-        font-style: normal;
-        font-weight: bolder;
-        margin-left: 4rem;
-        font-size: 24px;
-        line-height: 142.6%;
-        cursor: pointer; 
-    } 
-    
-    .customLink {
-        color:var(--primary);
-        text-decoration: none;
+  
+    li {
+      font-size: 0.65rem;
+      text-transform: uppercase;
+      margin: 0;
+      margin-left: 0.4rem;
+      margin-right: 0.9rem;
     }
-
-    .customLink:hover{
-        text-decoration: underline;
-    }
+  }
+  
