--- a/src/assets/styles/_lodgingsCards.scss
+++ b/src/assets/styles/_lodgingsCards.scss
@@ -1,10 +1,9 @@
 .lodgingscards {
-    width: 30%;
+    width: 20rem;
     height: 20rem;
-    margin: 1rem 0 1rem 0;
+    margin: 30px 0 30px 0;
     border-radius: 10px;
     background: linear-gradient(180deg,(#FF6060) 0% , (#FF6060) 72% ,(#9a3f3f) 100%) ;
-  
 }
 
 .lodgingsLink{
@@ -22,8 +21,31 @@
 .lodgingscards h2{
     font-size: 1.2rem;
     color: white;
-    // width: 90%; 
-    // margin: auto auto auto 0.3rem;
     margin-left: 0.8rem;;
     margin-top: 0.5rem;
 }
+
+ /* Media queries pour la version tablette */
+ @media (max-width: 1024px) {
+    .lodgingscards {
+        width: 33rem;
+        height: 25rem;
+    }
+ } 
+
+ /* Media queries pour la version mobile */
+ @media (max-width: 767px) {
+    .lodgingscards {
+        width: 86%;
+        height: 15rem;
+        margin: 0.9rem auto;
+    }
+
+    .lodgingscards h2{
+        font-size: 0.9rem;
+        color: white;
+        margin-top: 0.4rem; 
+        margin-bottom: 0.3rem;
+    }
+
+ }
