--- a/src/assets/styles/_lodgingPage.scss
+++ b/src/assets/styles/_lodgingPage.scss
@@ -4,7 +4,7 @@
 }
 
 .lodgingSelected{
-    margin: 0 auto 2rem auto;
+    margin: 0 auto 2rem 3.6rem;
     width: 90%;
     color: var(--primary);
 }
@@ -17,15 +17,12 @@
     display: flex;
     flex-direction: row; 
     justify-content: space-between;
+    align-items:baseline;
 }
-.firstBloc{
-    display: flex; 
-    // flex-direction: row;
-    // align-items: baseline;
-    // width: 90%; 
-}
+
 .tags{
     display: flex;
+    flex-wrap: wrap;
     margin-left: 0;
     font-weight: bolder;
 }
@@ -39,32 +36,100 @@
     height: 0.2rem; 
     border-radius: 11px;
     text-align: center;
-    margin: 7px;
+    margin: 5px;
 } 
 
-.hostDatas{
-  display: flex; 
-  flex-direction: row;
-  justify-content: space-between; 
-  align-items: flex-end;
-  margin-right: 0px;
-  font-size: 1.1rem;
-//   position: relative; 
-}
-.hostDatas p{
-    // margin: 35px;
-    // width: 30px;
-    overflow-wrap: normal;
-    font-weight: 700;
-    text-align: center;
-    // position: absolute; 
-    // right: 110px;
-}
-.hostDatas img{
+.hostDatas {
+    display: flex;
+    align-items:center;
+    font-size: 1.1rem;
+    margin-right: 0px;
+    margin-bottom: 0.9rem;
+  }
+  
+  .hostDatas--name{
+    font-weight: 500;
+    width: 90px;
+    text-align:center;
+    margin-right: -22px; 
+    margin-left: 34px;
+  }
+  
+  .hostDatas img {
+    margin-left: 25px;
     border-radius: 50%;
-    // padding: 1em;
-    height: 3.5em; 
-    width: 3.5em; 
-    // position: absolute;
-    // right: 0px;
+    height: 64px;
+    width: 64px;
+  }
+
+.rating img {
+    width: 1.5rem; 
+    height: 1.5rem;
+    margin-left: 12px;
+}
+/* Media queries pour la version mobile */
+@media (max-width: 767px) {
+
+.lodgingSelected{
+        margin: 3rem 1rem 0rem 1rem;
+        width: 90%;
+    }
+
+.lodgingSelected h1{
+    font-size: 1.1rem;
+  } 
+
+  .lodgingSelected p{
+    font-size: 0.8rem;
+    margin-bottom: 1.5rem;
+  }
+
+  .tag{
+    color: white; 
+    background-color: var(--primary);
+    padding: 0.25rem 0.95rem 0.75rem 0.95rem;
+    font-size: 0.55rem; 
+    width: 6rem;
+    height: 0.1rem; 
+    border-radius: 5px; 
+} 
+
+  .lodgingBloc{
+    display: flex;
+    flex-direction: column; 
+}
+
+.hostDatasBloc{
+    display: flex; 
+    flex-direction: row-reverse;
+    width: 95%;
+}
+
+.hostDatas {
+    font-size: 0.9rem;
+    margin-top: 0.7rem; 
+    margin-left: 7.7rem;
+  }
+  
+  .hostDatas--name{
+    font-weight: 500;
+    width:40px;
+    text-align:center;
+    margin-right: 0px; 
+    margin-left: 32px;
+  }
+  
+  .hostDatas img {
+    height: 32px;
+    width: 32px;
+    margin-right: -20px;
+  }
+
+.rating img {
+    width: 0.7rem; 
+    height: 0.7rem;
+    margin-top: 2rem;
+    margin-left: 3px;
+}
+
 }
