--- a/src/assets/styles/_lodgingsCards.scss
+++ b/src/assets/styles/_lodgingsCards.scss
@@ -1,7 +1,7 @@
 .lodgingscards {
-    width: 20rem;
+    width: 24rem;
     height: 20rem;
-    margin: 30px 0 30px 0;
+    margin: 25px 1px 15px 1px;
     border-radius: 10px;
     background: linear-gradient(180deg,(#FF6060) 0% , (#FF6060) 72% ,(#9a3f3f) 100%) ;
 }
