--- a/src/assets/styles/_footer.scss
+++ b/src/assets/styles/_footer.scss
@@ -1,5 +1,6 @@
 footer {
-    margin: 7rem auto auto auto;
+    margin-top: 7rem;
+    margin-bottom: 0;
     padding: 4.2rem ;
     color: white;
     display: flex;
@@ -24,7 +25,7 @@ footer {
  /* Media queries pour la version mobile */
  @media (max-width: 768px) {
    footer {
-      margin: 0.6rem auto auto auto;
+      margin-top: 3.3rem;
       font-size: 0.7rem;
       text-align:center;
    } 
