--- a/src/assets/styles/_lodgingPage.scss
+++ b/src/assets/styles/_lodgingPage.scss
@@ -49,14 +49,12 @@
   
   .hostDatas--name{
     font-weight: 500;
-    width: 90px;
-    text-align:center;
-    margin-right: -22px; 
-    margin-left: 34px;
+    width: 83px;
+    text-align:right;
   }
   
   .hostDatas img {
-    margin-left: 25px;
+   margin-left: 15px;
     border-radius: 50%;
     height: 64px;
     width: 64px;
@@ -102,21 +100,18 @@
 .hostDatasBloc{
     display: flex; 
     flex-direction: row-reverse;
-    width: 95%;
+    width: 90%;
 }
 
 .hostDatas {
     font-size: 0.9rem;
     margin-top: 0.7rem; 
-    margin-left: 7.7rem;
+    margin-left: 7.5rem;
   }
   
   .hostDatas--name{
     font-weight: 500;
-    width:40px;
-    text-align:center;
-    margin-right: 0px; 
-    margin-left: 32px;
+    width:93px;
   }
   
   .hostDatas img {
