--- a/src/assets/styles/_footer.scss
+++ b/src/assets/styles/_footer.scss
@@ -1,7 +1,7 @@
 footer {
-    margin-top: 7rem;
-    margin-bottom: 0;
+    margin: 7rem 0 0 0;
     padding: 4.2rem ;
+    width:auto;
     color: white;
     display: flex;
     align-items: center;
