--- a/src/assets/styles/_header.scss
+++ b/src/assets/styles/_header.scss
@@ -1,8 +1,9 @@
 header {
     margin-top: 2.5rem;
     margin-bottom: 2.5rem;
-    padding-left: 4.7rem;
-    padding-right: 4.7rem;
+    padding-left: 5%;
+    padding-right: 5%;
+    width:auto;
     height: 5rem;
     display: flex;
     align-items: center;
@@ -12,6 +13,7 @@ header {
     width: 13.1rem;
     height: 4.2rem;
     margin-right:auto;
+    margin-left:0;
   }
   
   nav {
@@ -45,6 +47,7 @@ header {
   
   /* Media queries pour la version tablette */
   @media (max-width: 1024px) {
+  
     .logo {
       width: 9rem;
       height: 3rem;
@@ -59,20 +62,21 @@ header {
   /* Media queries pour la version mobile */
   @media (max-width: 767px) {
     header {
-    margin-top: 1.5rem;
+    margin-top: 1rem;
     margin-bottom: 0;
     height: auto;
     width:auto;
-    padding-left: 2rem;
-    padding-right: 1rem;
+    padding-left: 2%;
+    padding-right: 2%;
     }
   
     .logo {
-      max-width: 9rem; 
-      min-width: 5rem;
-      max-height: 3rem;
-      min-height: 1.5rem;
+      max-width: 7rem; 
+      // min-width: 5rem;
+      max-height: 2.4rem;
+      // min-height: 1.5rem;
       margin-bottom: 1rem;
+      margin-left:5%;
     }
     
   nav{
@@ -91,3 +95,10 @@ header {
     }
   }
   
+  @media (max-width: 300px) {
+    li {
+      font-size: 0.5rem;
+      margin-left: 0.2rem;
+      margin-right: 0.2rem;
+    }
+  }
