--- a/src/assets/styles/_lodgingPage.scss
+++ b/src/assets/styles/_lodgingPage.scss
@@ -36,14 +36,14 @@
     height: 0.2rem; 
     border-radius: 11px;
     text-align: center;
-    margin: 5px;
+    margin: 5px 10px 5px 0px;
 } 
 
 .hostDatas {
     display: flex;
     align-items:center;
     font-size: 1.1rem;
-    margin-right: 0px;
+    margin-right: 10%;
     margin-bottom: 0.9rem;
   }
   
@@ -65,11 +65,28 @@
     height: 1.5rem;
     margin-left: 12px;
 }
+
+/* Media queries pour la version mobile */
+@media (max-width: 1024px) {
+    .hostDatas img {
+        margin-left: 10px;
+         border-radius: 50%;
+         height: 55px;
+         width: 55px;
+       }
+
+    .rating img {
+        width: 1rem; 
+        height: 1rem;
+        margin-left: 9px;
+    }
+}
+
 /* Media queries pour la version mobile */
 @media (max-width: 767px) {
 
 .lodgingSelected{
-        margin: 3rem 1rem 0rem 1rem;
+        margin: 0.5rem 1rem 0rem 1rem;
         width: 90%;
     }
 
@@ -104,12 +121,14 @@
 .hostDatasBloc{
     display: flex; 
     flex-direction: row-reverse;
-    width: 90%;
+    justify-content: space-between;
+    width: 100%;
+    padding-left:5%; 
 }
 
 .hostDatas {
     font-size: 0.9rem;
-    margin: 0.5rem -2.6em 0 10.5rem; 
+    margin: 0.5rem 3% 0 10.5rem; 
   }
   
   .hostDatas--name{
@@ -124,13 +143,21 @@
   }
 
 .rating{
-    margin-right: 0.5rem;
+    // margin-right: -1rem;
+    margin-left:-1.2rem; 
+    flex-direction: row;
 }  
 .rating img {
     width: 0.65rem; 
     height: 0.65rem;
     margin-top: 2rem;
-    margin-left: 1px;
+    margin-left: 0.5px;
 }
 
+}
+
+@media (max-width: 300px) {
+    .hostDatas{
+        margin-left: -30%;
+    }
 }
